--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
     "name": "atividade7",
+    "author": "Luis Seidel",
+    "license": "MIT",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -13,9 +15,11 @@
         "@types/react": "18.0.29",
         "@types/react-dom": "18.0.11",
         "classnames": "^2.3.2",
+        "config": "^3.3.9",
         "eslint": "8.36.0",
         "eslint-config-next": "13.2.4",
         "next": "13.2.4",
+        "nodemailer": "^6.9.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-responsive-carousel": "^3.2.23",
