--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "typescript": "5.0.2"
     },
     "devDependencies": {
+        "@types/nodemailer": "^6.4.7",
         "autoprefixer": "^10.4.14",
         "postcss": "^8.4.21",
         "tailwindcss": "^3.2.7"
